performance: attempt to improve performance - reset ioThreads to server defaults - bug fixing on netty buffered output - reduce call to netty headers set(String, String)